inline google font; above-the-fold portion css rending blocking elimianted.

--- a/index.html
+++ b/index.html
@@ -5,14 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content=" FILL ME IN ">
     <meta name="author" content=" FILL ME IN ">
-    <meta name="Cache-Control" content="max-age=86400" />
     <title>Cameron Pittman: Portfolio</title>
 
     <!-- Hmm, what is the impact of web fonts on speed? Measure it... -->
-    <link href="//fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
+    <!-- change the google font css inline to eliminate the CSS rending block-->
+    <style>@font-face { font-family: 'Open Sans'; font-style: normal; font-weight: 400; src: local('Open Sans'), local('OpenSans'), url(http://fonts.gstatic.com/s/opensans/v10/cJZKeOuBrn4kERxqtaUH3ZBw1xU1rKptJj_0jans920.woff2) format('woff2'); unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000; } @font-face { font-family: 'Open Sans'; font-style: normal; font-weight: 700; src: local('Open Sans Bold'), local('OpenSans-Bold'), url(http://fonts.gstatic.com/s/opensans/v10/k3k702ZOKiLJc3WVjuplzBampu5_7CjHW5spxoeN3Vs.woff2) format('woff2'); unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000; }</style>
 
-    <link href="css/style.css" rel="stylesheet">
-    <link href="css/print.css" rel="stylesheet">
+
+    <!---->
+    <style>
+    header { padding: 0 0.5em; color: #C90B0B; }
+    header img { border-radius: 40px; float: left; }
+    header p { font-size:1.5em; font-weight: bold; padding-left: 4em;}
+    header p span { font-size: 0.8em; font-weight: normal;}
+    </style>
+    <!-- <link href="css/style.css" rel="stylesheet"> -->
+    <link href="css/print.css" rel="stylesheet" media="print">
+  
+
 
     <script>
       (function(w,g){w['GoogleAnalyticsObject']=g;
@@ -24,6 +34,7 @@
     </script>
     <script async src="http://www.google-analytics.com/analytics.js" ></script>
     <script async src="js/perfmatters.js"></script>
+
   </head>
 
   <body>
@@ -31,6 +42,18 @@
       <a href="/"><img src="img/profilepic.jpg"></a>
       <p>Cameron Pittman<br><span>Course Developer</span></p>
     </header>
+
+    <script>
+      var cb = function() {
+        var l = document.createElement('link'); l.rel = 'stylesheet';
+        l.href = 'css/style.css';
+        var h = document.getElementsByTagName('head')[0]; h.parentNode.insertBefore(l, h);
+      };
+      var raf = requestAnimationFrame || mozRequestAnimationFrame ||
+          webkitRequestAnimationFrame || msRequestAnimationFrame;
+      if (raf) raf(cb);
+      else window.addEventListener('load', cb);
+    </script>
 
     <div class="container">
       <div class="hero">
